force-app/main/default/objects/SMS_Template__c/SMS_Template__c.object-meta.xml
<CustomObject>
    <label>SMS Template</label>
    <nameField>
        <label>SMS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>