force-app/main/default/objects/SMS_Template__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy Used Car</fullName>
            </value>
            <value>
                <fullName>Sell Used Car</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Buy Used Car Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>