force-app/main/default/objects/SMS_Template__c/fields/SMS_Body__c.field-meta.xml
<CustomField>
    <fullName>SMS_Body__c</fullName>
    <label>SMS Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>