force-app/main/default/objects/SMS_Template__c/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Qualified Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>